[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "instaloader>=4.14.1",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot==13.15",
    "pytube==15.0.0",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "yt-dlp>=2025.3.21",
]
